# vlm_eval_benchmark

./: .gitignore  README.md  llm_judge.py  main.py  project.md  pyproject.toml  requirements.txt  script.py
dataset/general_mp4/: gp.csv
scripts/: gpu_test.py  run_batch.py  run_batch_eval.py  run_benchmark.py  run_judge.py  upload_to_huggingface.py
src/realtime_eval/: PLAN.md  __main__.py
src/realtime_eval/core/: trt_backend.py
src/realtime_eval/pipeline/: sweep_rt.py
src/vlm_eval/: __init__.py  cli.py  config.py  hardware.py  hf_dataset.py  inspect.py  logging_utils.py  metrics.py  paths.py  video.py
src/vlm_eval/inference/: __init__.py  gemma.py  runner.py
src/vlm_eval/judge/: __init__.py  automatic_metrics.py  parser.py  prompts.py  runner.py
src/vlm_eval/llm/: __init__.py  base.py  factory.py  medusa_backend.py  openai_backend.py
src/vlm_eval_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utils/: llm.py
