[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-eval-benchmark"
version = "0.1.0"
description = "Video VLM benchmark and LLM-as-a-judge tooling"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.41",
  "accelerate>=0.30",
  "decord>=0.6.0",
  "numpy>=1.24",
  "Pillow>=9.5",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
vlm-benchmark = "vlm_eval.cli:benchmark_main"
vlm-judge = "vlm_eval.cli:judge_main"
vlm-batch = "vlm_eval.cli:batch_main"
vlm-gpu-test = "vlm_eval.cli:gpu_test_main"

[tool.setuptools.packages.find]
where = ["src"]
