[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-eval-benchmark"
version = "0.1.0"
description = "Video VLM benchmark and LLM-as-a-judge tooling"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.41",
  "accelerate>=0.30",
  "decord>=0.6.0",
  "numpy>=1.24",
  "Pillow>=9.5",
  "openai>=1.0.0",
  "datasets>=2.14",
  "python-dotenv>=1.0.0",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
]

[project.scripts]
vlm-benchmark = "vlm_eval.cli:benchmark_main"
vlm-judge = "vlm_eval.cli:judge_main"
vlm-batch = "vlm_eval.cli:batch_main"
vlm-gpu-test = "vlm_eval.cli:gpu_test_main"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
