[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-eval-benchmark"
version = "0.1.0"
description = "Video VLM benchmark and LLM-as-a-judge tooling"
# Capped at <3.13: torch 2.5.1+cu121 Windows wheels only go up to cp312.
requires-python = ">=3.10,<3.13"
dependencies = [
  "transformers>=4.41",
  "accelerate>=0.30",
  "decord>=0.6.0",
  "numpy>=1.24",
  "Pillow>=9.5",
  "openai>=1.0.0",
  "datasets>=2.14",
  "python-dotenv>=1.0.0",
  # Windows is the TensorRT-LLM box: tensorrt-llm 0.17 (its last Windows release)
  # hard-pins torch 2.4.1+cu124, so Windows uses that trio; every other platform
  # keeps the 2.5.1+cu121 trio.
  "torch==2.5.1 ; sys_platform != 'win32'",
  "torch==2.4.1 ; sys_platform == 'win32'",
  "torchvision==0.20.1 ; sys_platform != 'win32'",
  "torchvision==0.19.1 ; sys_platform == 'win32'",
  "torchaudio==2.5.1 ; sys_platform != 'win32'",
  "torchaudio==2.4.1 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
# TensorRT-LLM serving backend (drives `realtime-bench sweep-rt`). Windows only:
# 0.17.0.post1 is the last release with Windows wheels and ships cp310 only, so
# create the Windows venv with Python 3.10. Install with `uv sync --extra trt`.
trt = [
  "tensorrt-llm==0.17.0.post1 ; sys_platform == 'win32'",
]

[project.scripts]
vlm-benchmark = "vlm_eval.cli:benchmark_main"
vlm-judge = "vlm_eval.cli:judge_main"
vlm-batch = "vlm_eval.cli:batch_main"
vlm-gpu-test = "vlm_eval.cli:gpu_test_main"

realtime-bench = "realtime_eval.__main__:main"

intelli-bench = "intelligence_eval.__main__:main"
intelligence-bench = "intelligence_eval.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# Force uv to resolve wheels for both Windows and Linux x86_64 (CUDA 12.1 builds),
# otherwise the lock only contains the platform it was first resolved on.
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Windows torch trio is +cu124 (pinned by tensorrt-llm 0.17).
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# TensorRT-LLM and its NVIDIA-only deps (tensorrt, nvidia-modelopt, ...).
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[tool.uv.sources]
# Linux -> CUDA 12.1 wheels; Windows -> CUDA 12.4 wheels; macOS falls back to PyPI.
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
tensorrt-llm = { index = "nvidia" }
tensorrt = { index = "nvidia" }
tensorrt-cu12 = { index = "nvidia" }
nvidia-modelopt = { index = "nvidia" }

# The Linux tensorrt-llm wheels declare git-URL deps (flashinfer, s2wrapper) that
# uv refuses and that we never want on Windows. Pin static metadata from the
# Windows wheel's Requires-Dist so uv resolves from this instead of the wheel.
[[tool.uv.dependency-metadata]]
name = "tensorrt-llm"
version = "0.17.0.post1"
requires-dist = [
  "accelerate>=0.25.0",
  "build",
  "colored",
  "cuda-python==12.6.0",
  "diffusers>=0.27.0",
  "numpy<2",
  "onnx>=1.12.0",
  "onnx-graphsurgeon>=0.5.2",
  "ordered-set",
  "polygraphy==0.49.9",
  "psutil",
  "pynvml>=11.5.0",
  "pulp",
  "pandas",
  "h5py==3.12.1",
  "pywin32 ; sys_platform == 'win32'",
  "StrEnum",
  "sentencepiece>=0.2.0",
  "tensorrt~=10.8.0",
  "tokenizers>=0.14",
  "torch==2.4.1",
  "torchvision",
  "nvidia-modelopt[torch]~=0.17.0",
  "transformers<=4.45.2,>=4.38.2",
  "wheel",
  "optimum",
  "evaluate",
  "janus",
  "mpmath>=1.3.0",
  "click",
  "click-option-group",
  "pyzmq",
  "setuptools",
]
